2010-03-15  MORITA Hajime  <morrita@google.com>

        Reviewed by Alexey Proskuryakov.

        Selection.modify extends too far with 'lineboundary'.
        https://bugs.webkit.org/show_bug.cgi?id=33413

        Selection.modify() with 'lineboundary' granularity implies just
        "Go to the end of the line", unlike selection expansion with
        other type of granularities. This change handled LineGranularity
        as special case, to look-up end of line with UPSTREAM affinity. 
        Doing this prevents look-up algorithm to go next line.

        Test: editing/selection/extend-selection-expected.txt

        * dom/Position.cpp:
        (WebCore::Position::getInlineBoxAndOffset):
        Handled an edge case for node look-up with UPSTREAM.
        * editing/SelectionController.cpp:
        (WebCore::SelectionController::modifyExtendingForward):
        Added UPSTREAM tweak for the case for LineGranularity.
        
2010-03-14  Yuzo Fujishima  <yuzo@google.com>

        Reviewed by Shinichiro Hamaji.

        Always call PrintContext.end() from PrintContext::pageNumberForElement().

        Without this change, WebKit remains in printing mode after determining the page number if the specified element is found.

        https://bugs.webkit.org/show_bug.cgi?id=36049

        Test: printing/return-from-printing-mode.html

        * page/PrintContext.cpp:
        (WebCore::PrintContext::pageNumberForElement):

2010-03-11  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Gustavo Noronha Silva.

        [GStreamer] progressTimer never stopped after EOS
        https://bugs.webkit.org/show_bug.cgi?id=36007

        Mark the pipeline as paused only if playback hasn't ended
        yet. When didEnd() is triggered, the pipeline is paused (but
        paused() still returns false) and a timeupdate event is fired,
        those 2 conditions allow the HTMLMediaElement to stop the
        progressTimer (in updatePlayerState, via mediaPlayerTimeChanged).
